service/argocd-service-for-ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: access-ui-argocd
  namespace: argo
spec:
  selector:
      name: argocd-server
  ports:
    - name: server
      port: 80
      targetPort: 8080
