service/jenkins-service-for-ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: access-ui-jenkins
spec:
  type: ClusterIP
  ports:
    - name: ui
      port: 80
      targetPort: 8080
      protocol: TCP
  selector:
      app: jenkins
