service/micro-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: access-jenkins-and-argocd-ui
  namespace: default
  labels:
    app: jenkins
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: swamisandeepcloudrider.com
      http:
        paths:
          - backend:
              serviceName: access-ui-jenkins
              servicePort: 80
